# python-ci-test

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  tests.yml
tests/test_portal/: test_models.py
web_project/conf/: asgi.py  settings.py  urls.py  wsgi.py
web_project/locale/en/LC_MESSAGES/: django.po
web_project/locale/fr/LC_MESSAGES/: django.po
web_project/portal/: apps.py  models.py  utils.py  views.py
web_project/portal/migrations/: 0001_initial.py
web_project/portal/templates/portal/: index.html
