[tool.poetry]
name = "python-ci-test"
version = "0.1.0"
description = ""
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pre-commit = "^2.13.0"
bumpver = "^2021.1113"
pytest-django = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
